<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityMovies">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sort_name"
            android:title="@string/menu_sort_name"
            android:orderInCategory="1"
            app:showAsAction="never" />
        <item
            android:id="@+id/sort_popularity"
            android:title="@string/menu_sort_popularity"
            android:orderInCategory="2"
            app:showAsAction="never" />
        <item
            android:id="@+id/sort_rating"
            android:title="@string/menu_sort_rating"
            android:orderInCategory="3"
            app:showAsAction="never" />
    </group>

</menu>